Fix alignment issue, Post review details in required format

--- a/assets/css/rating.css
+++ b/assets/css/rating.css
@@ -15,3 +15,10 @@
     font-size: 20px;
     background-color: #7cced4;
 }
+.review-submit{
+    overflow-y: scroll;
+    height: 500px;
+    overflow-x: scroll;
+    width: 400px;
+    margin-left: 10px;
+}
